HUE-3294 [search] Improved style of the datepicker
(cherry picked from commit 8a205f0344cc41fe1ca43f5c6e72799c710bbd4d)

--- a/desktop/core/src/desktop/static/desktop/css/common_dashboard.css
+++ b/desktop/core/src/desktop/static/desktop/css/common_dashboard.css
@@ -302,6 +302,7 @@ body.modal-open {
 .facet-field-switch {
   display: inline;
   margin-top: 10px;
+  margin-left: 3px;
 }
 
 .facet-field-label {
@@ -336,6 +337,10 @@ body.modal-open {
 
 .facet-field-tile {
   float: left;
+}
+
+.card-column .simpledaterangepicker .input-prepend {
+  margin-left: 3px;
 }
 
 .card-column.span2 .facet-field-label-fixed-width {
