HUE-3294 [search] Integration with the new layout
(cherry picked from commit 6d23bd155c58334399d07d406b8762b39c634ff6)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -2765,8 +2765,17 @@ body {
   margin-top: -13px !important;
 }
 
+.hue-spinner-center.hue-spinner-xlarge {
+  margin-left: -30px !important;
+  margin-top: -30px !important;
+}
+
 .hue-spinner-large {
   font-size: 26px !important;
+}
+
+.hue-spinner-xlarge {
+  font-size: 60px !important;
 }
 
 .hue-spinner i {
