HUE-3294 [oozie] First pass of integration of the workflow editor with the new layout

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -972,3 +972,8 @@ h6 {
 #searchComponents .form-search .input-append .search-query {
   width: 50px;
 }
+
+/* oozie workflow */
+#wfEditor .card-toolbar {
+  position: static;
+}
