HUE-3294 [editor] Drop the background on the top bar
(cherry picked from commit 930cfb69a72b834b7bde16e5096c70c85f5caaa1)

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -955,6 +955,12 @@ h6 {
 }
 
 /* styling for the imported apps */
+
+.page-content .navbar-inner {
+  background-color: transparent;
+  border: none;
+}
+
 .page-content .navbar.navbar-inverse.navbar-fixed-top {
   position: static;
 }
