HUE-3294 [assist] Use hue-drop-down for function dialect selection
(cherry picked from commit c2ee67d4ec07cc0c40a23662bedcc3da6a8b35a3)

--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -2420,6 +2420,11 @@ body {
   margin-left: -1px;
 }
 
+.hue-drop-down-active span {
+  font-size: 12px;
+  font-weight: lighter;
+}
+
 .hue-context-menu {
   display: none;
   position: fixed;
