--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -1023,6 +1023,9 @@
   ## Flag to enable the saved Editor queries to be dragged and dropped into a workflow.
   # enable_document_action=false
 
+  ## Flag to enable Oozie backend filtering instead of doing it at the page level in Javascript. Requires Oozie 4.3+.
+  # enable_oozie_backend_filtering=false
+
 
 ###########################################################################
 # Settings to configure the Filebrowser app
