--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -931,7 +931,7 @@ div.box {
 }
 
 .filechooser-tree .editable-breadcrumb-input {
-  margin-left: 30px;
+  margin-left: 12px;
   margin-bottom: 0;
   border-radius: 2px;
   border: 1px solid #EEE;
@@ -944,6 +944,10 @@ div.box {
   min-height: 20px;
   font-size: 1.25em;
   padding-left: 4px!important;
+}
+
+.filechooser-tree .hueBreadcrumb > li:last-child > a {
+  color: #666;
 }
 
 /*
