HUE-5333 [assist] Fix context popover in responsive
(cherry picked from commit 4ea6ea6edf47bd7a77c56ed975370f0d39d6ae27)

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -959,6 +959,10 @@ h6 {
   background-color: #e5e5e5;
 }
 
+#sqlContextPopover .hue-popover {
+  position: fixed;
+}
+
 /* styling for the imported apps */
 
 .page-content .navbar-inner {
