HUE-5352 [fb] KOify the view file page
(cherry picked from commit 2bb9c18d475525060d22eb54a76875e485cd7de9)

--- a/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
@@ -11,14 +11,17 @@
 #loader {
   position: fixed;
   margin-top: 40px;
-  font-size: 50px;
-  text-align: center;
   width: 140px;
   height: 140px;
   line-height: 140px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   border-radius: 20px;
+}
+
+.loading {
+  font-size: 50px;
+  text-align: center;
 }
 
 .binary {
@@ -48,4 +51,9 @@ pre a:hover {
 .pagination-input {
   text-align: center;
   width: 40px;
+}
+
+dd {
+  margin-left: 0;
+  margin-bottom: 6px;
 }
