HUE-5354 [fb] Edit file shouldn't refresh the page
(cherry picked from commit d75ad267b202e94882114fe59a54a36943712153)

--- a/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
@@ -1,3 +1,12 @@
+#fileviewer .card-body {
+  padding: 0;
+  margin: 0;
+}
+
+#fileviewer .hueBreadcrumbBar {
+  margin: 0;
+}
+
 #fileArea {
   overflow: auto;
   background-color: #F5F5F5;
