--- a/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/css/display.css
@@ -11,6 +11,7 @@
   overflow: auto;
   background-color: #F5F5F5;
   position: relative;
+  font-size: 12px;
 }
 
 #fileArea.loading {
@@ -41,6 +42,7 @@ pre {
 pre a {
   color: #444;
   cursor: default;
+  white-space: inherit;
 }
 
 pre a:hover {
