HUE-5502 [responsive] Embeddable report

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -995,16 +995,16 @@ h6 {
   box-shadow: none;
 }
 
-/* editor */
-#editorComponents .progress {
+/* editor and report */
+.editorComponents .progress {
   border: none;
 }
 
-#editorComponents .context-panel {
+.editorComponents .context-panel {
   display: none;
 }
 
-#editorComponents .snippet {
+.editorComponents .snippet {
   margin-right: 0;
 }
 
