HUE-4578 [editor] Add autocompletion of GRANT and REVOKE statements

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -61,6 +61,7 @@
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecDescribe.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecDrop.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecError.js"></script>
+  <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecGrant.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecInsert.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecLoad.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpecLocations.js"></script>
