HUE-5245 [editor] Bump the darkness of placeholders and disabled snippet actions
(cherry picked from commit c663d0e5b80501401d04d63a06fe80b3743d5f6f)

--- a/desktop/libs/notebook/src/notebook/static/notebook/css/notebook.css
+++ b/desktop/libs/notebook/src/notebook/static/notebook/css/notebook.css
@@ -816,7 +816,7 @@ table.airy tr td {
 
 .snippet-side-btn.disabled {
   cursor: default !important;
-  color: #C2CFD8 !important;
+  opacity: 0.5;
 }
 
 .snippet-side-btn:focus {
