HUE-5517 [core] Improved UX of the auto logout modals
(cherry picked from commit db9d06a224c45b75fe8f59ded05a70e8a60b988b)

--- a/desktop/core/src/desktop/static/desktop/css/login.css
+++ b/desktop/core/src/desktop/static/desktop/css/login.css
@@ -35,6 +35,10 @@
   border-radius: 4px;
 }
 
+.login-container a {
+  white-space: normal;
+}
+
 .login-container .logo {
   background-color: #FFF;
   width: 70px;
