HUE-7 [metastore] Integrate new create table from a file in metastore
(cherry picked from commit dc96714a5f1946b779c443372294c021031009ec)

--- a/desktop/conf/pseudo-distributed.ini.tmpl
+++ b/desktop/conf/pseudo-distributed.ini.tmpl
@@ -927,6 +927,15 @@
 
 
 ###########################################################################
+# Settings to configure Metastore
+###########################################################################
+
+[metastore]
+  # Flag to turn on the new version of the create table wizard.
+  ## enable_new_create_table=false
+
+
+###########################################################################
 # Settings to configure Impala
 ###########################################################################
 
