HUE-5558 [responsive] Restyle drop or click button
(cherry picked from commit 7881a2817c3364d9d343a1fe7f120c74b6b6da43)

--- a/desktop/core/src/desktop/static/desktop/css/responsive.css
+++ b/desktop/core/src/desktop/static/desktop/css/responsive.css
@@ -391,7 +391,9 @@ body {
 }
 
 .left-nav-drop div {
-  margin: 15px 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
 }
 
 .left-nav-visible .left-nav-drop {
