--- a/desktop/core/src/desktop/static/desktop/css/hue3.css
+++ b/desktop/core/src/desktop/static/desktop/css/hue3.css
@@ -1301,6 +1301,12 @@ a#advanced-btn:hover {
   display: none;
 }
 
+#jHueScrollLeftAnchor {
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
+
 #jHueTourMask {
   position: absolute;
   display: none;
