[frontend] HUE-5450 Remove inline styles.

--- a/apps/security/src/security/static/security/css/security.css
+++ b/apps/security/src/security/static/security/css/security.css
@@ -140,7 +140,7 @@
   padding-top: 8px;
 }
 
-.path-container .btn-inverse {
+.path-container .btn {
   height: 34px;
   width: 34px;
   font-size: 14px;
