HUE-5706 [core] Use Grunt to build less.
In this commit, I added the minimum set of dependency to build css from Less.
I moved responsive.css to responsive.less and I introduced one variable into the less file.

You need to first have node and npm installed. The minimum version is specified in package.json
$> brew install node
$> brew update
$> brew upgrade node

Now you can install the grunt and related npm modules:
$> npm run install

Now you can compile less -> css.
$> make css

(cherry picked from commit 7ffb4c9b9ac928b126c5709996ae7778d029e6d1)
(cherry picked from commit 91915223dbce16c29dd245dc89becd4ba42b49c6)

--- a/desktop/core/src/desktop/static/desktop/less/responsive.less
+++ b/desktop/core/src/desktop/static/desktop/less/responsive.less
@@ -15,6 +15,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 */
+@import (reference) "cui/colors.less";
 
 html {
   height: 100%;
@@ -54,7 +55,7 @@ body {
   width: 100%;
   -ms-flex-direction: column;
   flex-direction: row;
-  background-color: #FFF;
+  background-color: @cui-white;
 }
 
 .top-nav {
