HUE-7 [importer] Fixed resize elements

--- a/desktop/core/src/desktop/static/desktop/css/wizard.css
+++ b/desktop/core/src/desktop/static/desktop/css/wizard.css
@@ -54,11 +54,11 @@
 }
 
 .step-indicator li:first-child:before {
-  left: 50%;
+  /*left: 50%;*/
 }
 
 .step-indicator li:last-child:before {
-  right: 50%;
+  /*right: 50%;*/
 }
 
 .step-indicator .active .step {
